ブログ記事から古い振り返り記事を作成 #2

--- a/2018.md
+++ b/2018.md
@@ -5,7 +5,7 @@
 2018年を振り返ってみようと思います。
 
 # 【2017年の抱負の結果】
-[2017年を振り返る](https://kazenetu.exblog.jp/238132433/)の抱負を振り返ります。  
+[2017年を振り返る](2017.md)の抱負を振り返ります。  
 
 > 「管理もできるエンジニア」を目指しつつ、技術スキルの向上を図ろうと思います。  
 > また、社員全体の技術スキルの底上げにも関われるポジションにつけるように
